flux/infra/backrest/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backrest
  namespace: backrest
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: backrest
  template:
    metadata:
      labels:
        app.kubernetes.io/name: backrest
    spec:
      hostname: backrest
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      securityContext:
        runAsUser: 1000
        runAsGroup: 2000
        fsGroup: 2000
        readOnlyRootFilesystem: true
      containers:
        - name: backrest
          image: garethgeorge/backrest:v1.10.1
          podSecurityContext:
            fsGroup: 2000
            fsGroupChangePolicy: "Always"
          ports:
            - name: http
              containerPort: 9898
              protocol: TCP # Web UI
          volumeMounts:
            - mountPath: /config
              name: backrest-config
            - mountPath: /data
              name: backrest-data
            - mountPath: /mnt/syncthing
              name: syncthing-data
            - mountPath: /mnt/retrogames
              name: retrogames-data
            - mountPath: /mnt/immich-photos
              name: immich-photos
            - mountPath: /cache
              name: backrest-cache
            - mountPath: /backrest-tmp
              name: backrest-tmp
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              memory: "750M"
              cpu: ".5"
            limits:
              memory: "750M"
              cpu: ".5"

      volumes:
        - name: backrest-config
          persistentVolumeClaim:
            claimName: backrest-config
        - name: backrest-data
          persistentVolumeClaim:
            claimName: backrest-data
        - name: syncthing-data
          persistentVolumeClaim:
            claimName: syncthing-data
        - name: retrogames-data
          persistentVolumeClaim:
            claimName: retrogames-data
        - name: immich-photos
          persistentVolumeClaim:
            claimName: immich-photos
        - name: backrest-cache
          emptyDir:
            sizeLimit: 10Gi
        - name: backrest-tmp
          emptyDir:
            sizeLimit: 5Gi
