flux/infra/backrest/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backrest
  namespace: backrest
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: backrest
  ports:
    - name: http # Web UI
      port: 9898
      targetPort: http
      protocol: TCP
