flux/infra/backrest/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backrest-web-route
  namespace: backrest
spec:
  parentRefs:
    - name: main-gateway
      namespace: traefik

  hostnames:
    - backrest.tartarus.us

  rules:
    - backendRefs:
        - name: backrest
          port: 9898
